// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieList should match the snapshot with multiple movies 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MovieList
    favorites={
        Array [
            Object {
              "movie_id": 0,
              "overview": "test1",
              "poster_path": "test1",
              "release_date": 2008,
              "title": "test1",
              "vote_average": 1,
            },
            Object {
              "movie_id": 1,
              "overview": "test2",
              "poster_path": "test2",
              "release_date": 2008,
              "title": "test2",
              "vote_average": 1,
            },
          ]
    }
    movies={
        Array [
            Object {
              "movie_id": 0,
              "overview": "test1",
              "poster_path": "test1",
              "release_date": 2008,
              "title": "test1",
              "vote_average": 1,
            },
            Object {
              "movie_id": 1,
              "overview": "test2",
              "poster_path": "test2",
              "release_date": 2008,
              "title": "test2",
              "vote_average": 1,
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="movie-cards"
>
          <Connect(MovieCard)
                    movie_id={0}
                    overview="test1"
                    poster_path="test1"
                    release_date={2008}
                    starColor="#f2f2f2"
                    title="test1"
                    vote_average={1}
          />
          <Connect(MovieCard)
                    movie_id={1}
                    overview="test2"
                    poster_path="test2"
                    release_date={2008}
                    starColor="#f2f2f2"
                    title="test2"
                    vote_average={1}
          />
</div>,
        <button
          className="more-btn"
          onClick={[Function]}
>
          View More
</button>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Connect(MovieCard)
              movie_id={0}
              overview="test1"
              poster_path="test1"
              release_date={2008}
              starColor="#f2f2f2"
              title="test1"
              vote_average={1}
/>,
            <Connect(MovieCard)
              movie_id={1}
              overview="test2"
              poster_path="test2"
              release_date={2008}
              starColor="#f2f2f2"
              title="test2"
              vote_average={1}
/>,
          ],
          "className": "movie-cards",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "class",
            "props": Object {
              "movie_id": 0,
              "overview": "test1",
              "poster_path": "test1",
              "release_date": 2008,
              "starColor": "#f2f2f2",
              "title": "test1",
              "vote_average": 1,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "class",
            "props": Object {
              "movie_id": 1,
              "overview": "test2",
              "poster_path": "test2",
              "release_date": 2008,
              "starColor": "#f2f2f2",
              "title": "test2",
              "vote_average": 1,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "View More",
          "className": "more-btn",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "View More",
        "type": "button",
      },
    ],
    "type": "main",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="movie-cards"
>
            <Connect(MovieCard)
                        movie_id={0}
                        overview="test1"
                        poster_path="test1"
                        release_date={2008}
                        starColor="#f2f2f2"
                        title="test1"
                        vote_average={1}
            />
            <Connect(MovieCard)
                        movie_id={1}
                        overview="test2"
                        poster_path="test2"
                        release_date={2008}
                        starColor="#f2f2f2"
                        title="test2"
                        vote_average={1}
            />
</div>,
          <button
            className="more-btn"
            onClick={[Function]}
>
            View More
</button>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Connect(MovieCard)
                movie_id={0}
                overview="test1"
                poster_path="test1"
                release_date={2008}
                starColor="#f2f2f2"
                title="test1"
                vote_average={1}
/>,
              <Connect(MovieCard)
                movie_id={1}
                overview="test2"
                poster_path="test2"
                release_date={2008}
                starColor="#f2f2f2"
                title="test2"
                vote_average={1}
/>,
            ],
            "className": "movie-cards",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "class",
              "props": Object {
                "movie_id": 0,
                "overview": "test1",
                "poster_path": "test1",
                "release_date": 2008,
                "starColor": "#f2f2f2",
                "title": "test1",
                "vote_average": 1,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "class",
              "props": Object {
                "movie_id": 1,
                "overview": "test2",
                "poster_path": "test2",
                "release_date": 2008,
                "starColor": "#f2f2f2",
                "title": "test2",
                "vote_average": 1,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "View More",
            "className": "more-btn",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "View More",
          "type": "button",
        },
      ],
      "type": "main",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`MovieList should match the snapshot with no movies 1`] = `"<main><div class=\\"movie-cards\\"></div><button class=\\"more-btn\\">View More</button></main>"`;

exports[`MovieList should match the snapshot with one movie 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MovieList
    favorites={
        Array [
            Object {
              "movie_id": 0,
              "overview": "test",
              "poster_path": "test",
              "release_date": 2008,
              "title": "test",
              "vote_average": 1,
            },
          ]
    }
    movies={
        Array [
            Object {
              "movie_id": 0,
              "overview": "test",
              "poster_path": "test",
              "release_date": 2008,
              "title": "test",
              "vote_average": 1,
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="movie-cards"
>
          <Connect(MovieCard)
                    movie_id={0}
                    overview="test"
                    poster_path="test"
                    release_date={2008}
                    starColor="#f2f2f2"
                    title="test"
                    vote_average={1}
          />
</div>,
        <button
          className="more-btn"
          onClick={[Function]}
>
          View More
</button>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Connect(MovieCard)
              movie_id={0}
              overview="test"
              poster_path="test"
              release_date={2008}
              starColor="#f2f2f2"
              title="test"
              vote_average={1}
/>,
          ],
          "className": "movie-cards",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "class",
            "props": Object {
              "movie_id": 0,
              "overview": "test",
              "poster_path": "test",
              "release_date": 2008,
              "starColor": "#f2f2f2",
              "title": "test",
              "vote_average": 1,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "View More",
          "className": "more-btn",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "View More",
        "type": "button",
      },
    ],
    "type": "main",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="movie-cards"
>
            <Connect(MovieCard)
                        movie_id={0}
                        overview="test"
                        poster_path="test"
                        release_date={2008}
                        starColor="#f2f2f2"
                        title="test"
                        vote_average={1}
            />
</div>,
          <button
            className="more-btn"
            onClick={[Function]}
>
            View More
</button>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Connect(MovieCard)
                movie_id={0}
                overview="test"
                poster_path="test"
                release_date={2008}
                starColor="#f2f2f2"
                title="test"
                vote_average={1}
/>,
            ],
            "className": "movie-cards",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "class",
              "props": Object {
                "movie_id": 0,
                "overview": "test",
                "poster_path": "test",
                "release_date": 2008,
                "starColor": "#f2f2f2",
                "title": "test",
                "vote_average": 1,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "View More",
            "className": "more-btn",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "View More",
          "type": "button",
        },
      ],
      "type": "main",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
